crates/smart-config/tests/ui/derives/bogus_alias_name_for_config.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
struct NestedConfig {
    field: u64,
}

#[derive(DescribeConfig)]
struct TestConfig {
    #[config(nest, alias = "what?")]
    nested: NestedConfig,
}

fn main() {}
